<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
	        <ImageView
	            android:id="@+id/image_view_poi"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:adjustViewBounds="true"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/img_1001" />
	
	        <TextView
	            android:id="@+id/text_view_desc"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/app_name"
	            android:paddingLeft="16dp"
	            android:paddingRight="16dp"
	            android:paddingTop="8dp"
	            android:paddingBottom="8dp"
	            android:textSize="14sp"
	            android:background="#f3ffde"
	            android:textStyle="bold"/>

	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="48dp" >

	            <ImageView
	                android:layout_width="32dp"
	                android:layout_height="32dp"
	                android:layout_margin="8dp"
	                android:src="@drawable/ic_address"
	                android:contentDescription="@string/app_name" />

	            <LinearLayout
	                android:layout_width="0dip"
	                android:layout_height="48dp"
	                android:orientation="vertical"
	                android:layout_weight="1"
	                android:layout_marginBottom="4dp"
	            	android:background="@drawable/border" >
	                
			        <TextView
			            android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
			            android:text="@string/txt_address"
			            android:textColor="#ccc"
			            android:textSize="12sp" />
			        
			       <TextView
			            android:id="@+id/text_view_address"
			            android:layout_width="match_parent"
			            android:layout_height="0dip"
			            android:layout_weight="1"
			            android:layout_marginBottom="4dp"
			            android:text="@string/app_name"
			            android:textColor="#333"
			            android:textSize="12sp" />

	            </LinearLayout>
	           	
	            <ImageView
	                android:id="@+id/image_view_right"
	                android:layout_width="48dp"
	                android:layout_height="48dp"
	                android:padding="8dp"
	                android:background="@drawable/border"
	                android:src="@drawable/ic_action_right"
	                android:contentDescription="@string/app_name" />
	            
	       </LinearLayout>
	       <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="48dp" >

	            <ImageView
	                android:layout_width="32dp"
	                android:layout_height="32dp"
	                android:layout_margin="8dp"
	                android:src="@drawable/ic_traffic"
	                android:contentDescription="@string/app_name" />
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="48dp"
	                android:orientation="vertical"
	                android:background="@drawable/border"
	                android:layout_marginBottom="4dp" >


			
			
			        <TextView
			            android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
			            android:text="@string/txt_traffic"
			            android:textColor="#ccc"
			            android:textSize="12sp" />
			        
			       <TextView
			            android:id="@+id/text_view_traffic"
			            android:layout_width="match_parent"
			            android:layout_height="0dip"
			            android:layout_weight="1"
			            android:layout_marginBottom="4dp"
			            android:text="@string/app_name"
			            android:textColor="#333"
			            android:textSize="12sp" />

	            </LinearLayout>
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="48dp" >

	            <ImageView
	                android:layout_width="32dp"
	                android:layout_height="32dp"
	                android:layout_margin="8dp"
	                android:src="@drawable/ic_time"
	                android:contentDescription="@string/app_name" />
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="48dp"
	                android:orientation="vertical"
	                android:layout_marginBottom="4dp"
	                android:background="@drawable/border" >

				  <TextView
			            android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
			            android:text="@string/txt_time"
			            android:textColor="#ccc"
			            android:textSize="12sp" />
			        
			       <TextView
			            android:id="@+id/text_view_time"
			            android:layout_width="match_parent"
			            android:layout_height="0dip"
			            android:layout_weight="1"
			            android:layout_marginBottom="4dp"
			            android:text="@string/app_name"
			            android:textColor="#333"
			            android:textSize="12sp" />

	            </LinearLayout>
	         </LinearLayout>
	         
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="48dp" >

	            <ImageView
	                android:layout_width="32dp"
	                android:layout_height="32dp"
	                android:layout_margin="8dp"
	                android:src="@drawable/ic_ticket"
	                android:contentDescription="@string/app_name" />
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="48dp"
	                android:orientation="vertical"
	                android:layout_marginBottom="4dp"
	                android:background="@drawable/border" >

				  <TextView
			            android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
			            android:text="@string/txt_ticket"
			            android:textColor="#ccc"
			            android:textSize="12sp" />
			        
			       <TextView
			            android:id="@+id/text_view_ticket"
			            android:layout_width="match_parent"
			            android:layout_height="0dip"
			            android:layout_weight="1"
			            android:layout_marginBottom="4dp"
			            android:text="@string/app_name"
			            android:textColor="#333"
			            android:textSize="12sp" />

	            </LinearLayout>

	        </LinearLayout>
	      	<LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="48dp" >

	            <ImageView
	                android:layout_width="32dp"
	                android:layout_height="32dp"
	                android:layout_margin="8dp"
	                android:src="@drawable/ic_tel"
	                android:contentDescription="@string/app_name" />
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="48dp"
	                android:orientation="vertical"
	                android:layout_marginBottom="4dp"
	                android:background="@drawable/border" >

				  <TextView
			            android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
			            android:text="@string/txt_tel"
			            android:textColor="#ccc"
			            android:textSize="12sp" />
			        
			       <TextView
			            android:id="@+id/text_view_tel"
			            android:layout_width="match_parent"
			            android:layout_height="0dip"
			            android:layout_weight="1"
			            android:layout_marginBottom="4dp"
			            android:text="@string/app_name"
			            android:textColor="#333"
			            android:textSize="12sp"/>

	            </LinearLayout>
	        
	        </LinearLayout>
	        
	     </LinearLayout>
        
    </ScrollView>

</LinearLayout>
